--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/react-typing-effect": "^2.0.6",
+    "axios": "^1.6.2",
     "next": "14.0.3",
     "octokit": "^3.1.2",
     "react": "^18",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18",
+    "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
