--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-typing-effect": "^2.0.6",
+    "@uiw/react-md-editor": "^3.6.0",
     "axios": "^1.6.2",
+    "highlight.js": "^11.9.0",
     "next": "14.0.3",
+    "next-remove-imports": "^1.0.12",
     "octokit": "^3.1.2",
     "react": "^18",
     "react-cookie": "^6.1.1",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
+    "react-markdown": "^9.0.1",
     "react-redux": "^8.1.3",
+    "react-syntax-highlighter": "^15.5.0",
     "redux-persist": "^6.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
