--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-typing-effect": "^2.0.6",
-    "@uiw/react-md-editor": "^3.6.0",
+    "@uiw/react-md-editor": "^3.25.6",
     "axios": "^1.6.2",
     "highlight.js": "^11.9.0",
     "next": "14.0.3",
     "next-remove-imports": "^1.0.12",
+    "next-theme": "^0.1.5",
+    "next-themes": "^0.2.1",
     "octokit": "^3.1.2",
     "react": "^18",
     "react-cookie": "^6.1.1",
