--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 NEXT_PUBLIC_EMAIL="e759ksh@naver.com"
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyBAcJ0VLADLpaGDQwCYchzK4fGmFtfsh6s
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=nextblog-715b4.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=nextblog-715b4
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=nextblog-715b4.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=655466732219
+NEXT_PUBLIC_FIREBASE_APP_ID=1:655466732219:web:a3d4a74d006200268ba79e
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-MQHPXJBT92
