--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-typing-effect": "^2.0.6",
     "@uiw/react-md-editor": "^3.25.6",
     "axios": "^1.6.2",
+    "firebase": "^10.7.1",
     "highlight.js": "^11.9.0",
     "next": "14.0.3",
     "next-remove-imports": "^1.0.12",
@@ -29,12 +30,15 @@
     "redux-persist": "^6.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "typewriter-effect": "^2.19.0"
+    "timeago.js": "^4.0.2",
+    "typewriter-effect": "^2.19.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
