--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-typing-effect": "^2.0.6",
+    "@uiw/react-markdown-preview": "^5.0.3",
     "@uiw/react-md-editor": "^3.25.6",
     "axios": "^1.6.2",
     "firebase": "^10.7.1",
