--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@toss/utils": "^1.4.6",
     "@types/react-typing-effect": "^2.0.6",
     "@uiw/react-markdown-preview": "^5.0.3",
     "@uiw/react-md-editor": "^3.25.6",
