--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.4",
     "@reduxjs/toolkit": "^1.9.7",
     "@toss/utils": "^1.4.6",
+    "@types/mdx": "^2.0.10",
     "@types/react-typing-effect": "^2.0.6",
     "@uiw/react-markdown-preview": "^5.0.3",
     "@uiw/react-md-editor": "^3.25.6",
     "axios": "^1.6.2",
+    "cheerio": "^1.0.0-rc.12",
     "firebase": "^10.7.1",
     "highlight.js": "^11.9.0",
     "next": "14.0.3",
+    "next-mdx-remote": "^4.4.1",
     "next-remove-imports": "^1.0.12",
     "next-theme": "^0.1.5",
     "next-themes": "^0.2.1",
@@ -30,6 +36,8 @@
     "react-redux": "^8.1.3",
     "react-syntax-highlighter": "^15.5.0",
     "redux-persist": "^6.0.0",
+    "rehype": "^13.0.1",
+    "rehype-react": "^8.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "timeago.js": "^4.0.2",
