--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-typing-effect": "^2.0.6",
     "@uiw/react-markdown-preview": "^5.0.3",
     "@uiw/react-md-editor": "^3.25.6",
+    "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
     "firebase": "^10.7.1",
