--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=nextblog-715b4.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=655466732219
 NEXT_PUBLIC_FIREBASE_APP_ID=1:655466732219:web:a3d4a74d006200268ba79e
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-MQHPXJBT92
+NEXT_PUBLIC_GTAG=G-TRTHKJCV48
