--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@uiw/react-md-editor": "^3.25.6",
     "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.2",
+    "browser-image-compression": "^2.0.2",
     "cheerio": "^1.0.0-rc.12",
     "firebase": "^10.7.1",
     "highlight.js": "^11.9.0",
